更新些基础